--- a/test/Test TextureDataset.ipynb
+++ b/test/Test TextureDataset.ipynb
@@ -30,23 +30,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Namespace(batch_size=1, cloth_channels=19, crop_bounds=None, dataroot='data/deep_fashion_all', input_transforms='none', model='texture', num_works=1, shuffle_data=False, texture_channels=3)"
+       "Namespace(batch_size=4, cloth_channels=19, crop_bounds=None, dataroot='data/deep_fashion_all', input_transforms='none', max_dataset_size=200, model='texture', num_threads=1, shuffle_data=False, texture_channels=3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "opt = Namespace(model=\"texture\", batch_size=1, shuffle_data=False, num_works=1, dataroot=\"data/deep_fashion_all\", crop_bounds=None, input_transforms=\"none\", cloth_channels=19, texture_channels=3)\n",
+    "opt = Namespace(model=\"texture\", batch_size=4, shuffle_data=False, dataroot=\"data/deep_fashion_all\", crop_bounds=None, input_transforms=\"none\", cloth_channels=19, texture_channels=3, num_threads=1, max_dataset_size=200)\n",
     "opt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataset [TextureDataset] was created\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import create_dataset\n",
+    "dataset = create_dataset(opt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<datasets.CappedDataLoader at 0x7efcac105d30>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_iter = iter(dataset)"
    ]
   },
   {
@@ -55,24 +102,275 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "data/deep_fashion_all/texture is not a valid directory",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-ac3f73ec252a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatasets\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Development/swapnet/datasets/__init__.py\u001b[0m in \u001b[0;36mcreate_dataset\u001b[0;34m(opt)\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0;34m>>\u001b[0m\u001b[0;34m>\u001b[0m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \"\"\"\n\u001b[0;32m---> 49\u001b[0;31m     \u001b[0mdata_loader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCappedDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata_loader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Development/swapnet/datasets/__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, opt)\u001b[0m\n\u001b[1;32m     63\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0mdataset_class\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_dataset_using_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"dataset [{type(self.dataset).__name__}] was created\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m         self.dataloader = torch.utils.data.DataLoader(\n",
-      "\u001b[0;32m~/Development/swapnet/datasets/texture_dataset.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, opt)\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0;31m# get all texture files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtexture_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataroot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"texture\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtexture_files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_valid_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtexture_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIMG_EXTENSIONS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m         \u001b[0;31m# cloth files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcloth_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataroot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"cloth\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Development/swapnet/datasets/data_utils.py\u001b[0m in \u001b[0;36mfind_valid_files\u001b[0;34m(dir, extensions, max_dataset_size)\u001b[0m\n\u001b[1;32m     46\u001b[0m     \"\"\"\n\u001b[1;32m     47\u001b[0m     \u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"%s is not a valid directory\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mdir\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfnames\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: data/deep_fashion_all/texture is not a valid directory"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== 0 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 1 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 2 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 3 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 4 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 5 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 6 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 7 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 8 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 9 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 10 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 11 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 12 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 13 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 14 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 15 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 16 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 17 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 18 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 19 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 20 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 21 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 22 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 23 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 24 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 25 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 26 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 27 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 28 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 29 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 30 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 31 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 32 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 33 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 34 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 35 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 36 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 37 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 38 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 39 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 40 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 41 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 42 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 43 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 44 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 45 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 46 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 47 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 48 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "=== 49 ===\n",
+      "torch.Size([4, 3, 128, 128])\n",
+      "torch.Size([4, 12, 4])\n",
+      "torch.Size([4, 19, 128, 128])\n",
+      "torch.Size([4, 3, 128, 128])\n"
      ]
     }
    ],
    "source": [
-    "from datasets import create_dataset\n",
-    "dataset = create_dataset(opt)"
+    "from modules.swapnet_modules import TextureModule\n",
+    "\n",
+    "model = TextureModule()\n",
+    "\n",
+    "for i, data in enumerate(dataset):\n",
+    "    print(\"===\",i, \"===\")\n",
+    "    textures, rois, cloths, targets = data\n",
+    "    print(textures.shape)\n",
+    "    print(rois.shape)\n",
+    "    print(cloths.shape)\n",
+    "    print(targets.shape)\n",
+    "    model(textures, rois, cloths).shape"
    ]
   },
   {
@@ -99,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
